# hats-crossmatch-benchmark

./: .gitignore  EXPERIMENT_NOTEBOOK.md  README.md  pyproject.toml  run_param_sweep.sh  run_sweep.sh  sweep_bench.py
benchmarks/: cli.py  config.py  metrics.py  report.py  runner.py  stream_runner.py
examples/: crossmatch_example.ipynb
reference/: README.md
reference/examples/: basic_stream.py  hf_comparison.py  speedtest.py
reference/hats_crossmatch/: __init__.py  client.py  throughput.py
results/: 2026-03-19T15-31-42.047382p00-00_cfa_cfa3_x_sdss.json  2026-03-19T15-36-18.629599p00-00_gz10_x_sdss.json  2026-03-19T15-53-58.031030p00-00_sdss_x_gaia.json  2026-03-19T20-37-37.693282p00-00_cfa_cfa3_x_sdss.json  2026-03-19T20-40-04.373173p00-00_gz10_x_sdss.json  2026-03-19T21-05-53.430892p00-00_sdss_x_gaia.json  benchmark_summary.ipynb  sharding_summary.ipynb
results/param_sweep/: sweep_results.json  sweep_results.jsonl
