[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hats-crossmatch-benchmark"
version = "0.1.0"
description = "Benchmarking tool for LSDB crossmatch performance on HATS-formatted catalogs"
requires-python = ">=3.13"
dependencies = [
    "lsdb",
    "huggingface_hub",
    "psutil",
    "click",
    "s3fs",
]

[project.optional-dependencies]
dev = ["pytest"]
