[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hats-crossmatch-benchmark"
version = "0.1.0"
description = "Benchmarking tool for LSDB crossmatch performance on HATS-formatted catalogs"
requires-python = ">=3.12"
dependencies = [
    "lsdb",
    "huggingface_hub",
    "psutil",
    "click",
    "s3fs",
    "datasets",
    "matplotlib>=3.10.8",
    "jupyter>=1.1.1",
    "torch>=2.11.0",
]

[tool.setuptools]
packages = []

[project.optional-dependencies]
dev = ["pytest"]
